Add Photoshop Section, Notifications, Change route

--- a/main/app/templates/display-directory.html
+++ b/main/app/templates/display-directory.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-inverse bg-inverse">
     <a class="navbar-brand" href="#">PDBEYC3</a>
-    <a href="/"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Singular Images</button></a>
+    <a href="/display-single"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Singular Images</button></a>
 </nav>
 <hr>
 <div class="container">
