--- a/main/app/templates/display.html
+++ b/main/app/templates/display.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-inverse bg-inverse">
     <a class="navbar-brand" href="#">PDBEYC-3</a>
-    <a href="/display-directory"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Batch Images</button></a>
+    <a href="/"><button class="btn btn-primary my-2 my-sm-0 ml-12" type="submit">Upload Batch Images</button></a>
 </nav>
 <hr>
 
