--- a/main/app/templates/processing.html
+++ b/main/app/templates/processing.html
@@ -17,7 +17,7 @@
     <body>
         <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-                <img src="/static/loading.gif" alt="Processing">
+                <img src="/static/loading.gif" alt="Processing" width="150" height="150">
             </div>
         </div>
     </body>
