--- a/main/app/templates/processing.html
+++ b/main/app/templates/processing.html
@@ -10,27 +10,27 @@
             <br>
             <div class="large" id="pre-model-text">Loading images to pre duplicates model : </div>
             <div class="progress">
-                <div id = "pre-model" class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "pre-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
             <div class="large" id="post-model-text">Loading images to post duplicates model : </div>
             <div class="progress">
-                <div id = "post-model" class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "post-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
             <div class="large" id="pre-post-model-text">Loading images to pre post model : </div>
             <div class="progress">
-                <div id = "pre-post-model" class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "pre-post-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
             <div class="large" id="pre-compare-text">Comparing pre images for duplicates : </div>
             <div class="progress">
-                <div id = "pre-compare" class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "pre-compare" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
             <div class="large" id="post-compare-text">Comparing post images for duplicates : </div>
             <div class="progress">
-                <div id = "post-compare" class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "post-compare" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
     </body>
@@ -63,7 +63,7 @@
             socket.on('pre-compare', function(data){
                 
                 $('#pre-compare').attr('aria-valuenow', data.pre_compare_i);
-                $('#pre-compare').attr('style', "width:" + (data.post_compare_i*100)/data.total + "%");
+                $('#pre-compare').attr('style', "width:" + (data.pre_compare_i*100)/data.total + "%");
                 $('#pre-compare-text').html("Comparing pre images for duplicates : " + data.pre_compare_img + " " +data.pre_compare_i+"/"+data.total);
 
             })
@@ -73,6 +73,11 @@
                 $('#post-compare').attr('style', "width:" + (data.post_compare_i*100)/data.total + "%");
                 $('#post-compare-text').html("Comparing post images for duplicates : " + data.post_compare_img + " " + data.post_compare_i +"/"+data.total);
 
+            })
+            socket.on('result', function(data){
+                if(data.result == true){
+                    window.location.replace("/result-directory");
+                }
             })
 
             
