--- a/main/app/templates/result-directory.html
+++ b/main/app/templates/result-directory.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                        Match = {{ ((0.5/(0.5+post_match[0][t]))*100) }}%
+                        Match = {{ ((0.5/(0.5+match[0][t]))*100) }}%
                         <br>
                         </div>
                         <div class="card-footer text-muted">
