--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -17,27 +17,24 @@
   <body>
       <nav class="navbar navbar-expand-lg navbar-light text-white"
            style="background-color: #4A33E8;">
-          <a class="navbar-brand text-white" href="#">EYC3PDBS3</a>
+          <a class="navbar-brand text-white" href="/">EYC3PDBS3</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white" href="/intro?size=200&images=9&time=1">Intro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
+                <a class="nav-link text-white" href="/rcpr">RCPR</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/vector">Vector Representation</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link text-white" href="/">Triplets</a>
+                <a class="nav-link text-white" href="/triplet">Triplets</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link text-white" href="/intro?size=60&images=72&time=0">SpeedTest</a>
-                </li>
+                <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/photoshop?out=0">Photoshop</a>
               </li>
