--- a/main/demo/templates/intro.html
+++ b/main/demo/templates/intro.html
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link text-white" href="/intro?size=200&images=9&time=2">Intro</a>
+        <a class="nav-link text-white" href="/intro?size=190&images=9&time=2">Intro</a>
         </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
@@ -31,7 +31,7 @@
             <a class="nav-link text-white" href="/intro?size=60&images=63&time=0.2">SpeedTest</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link text-white" href="/photoshop">Photoshop</a>
+        <a class="nav-link text-white" href="photoshop?out=0">Photoshop</a>
         </li>
     </ul>
     </div>
@@ -84,7 +84,7 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-    var socket = io.connect('http://0.0.0.0:5000/');
+    var socket = io.connect('http://0.0.0.0:8000/');
 
     $i=0
     socket.on('pre', function(data){
