--- a/main/demo/templates/vector.html
+++ b/main/demo/templates/vector.html
@@ -1,29 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br><br>
 <h1 class="m-3 text-center">Image to Vector</h1>
-<br><br>
 <div class="container-fluid">
     <div class="row p-0 text-center">
-        <div class="col-sm-4">
-            <img src="" alt=""
-            class="img-fluid img-thumbnail" width="400px">
+        <div class="col-sm-6">
+            <img id="img_a" src="" alt=""
+            class="img-fluid img-thumbnail" width="180px">
         </div>
-        <div class="col-sm-7 m-3">
-            <p></p><h4>Vector of size (128 X 1)</h4>
+        <div class="col-sm-6">
+            <img id="img_p" src="" alt=""
+            class="img-fluid img-thumbnail" width="180px">
         </div>
-       
     </div>
+
+    <div class="row p-0 text-center">
+        <div class="col-sm-6">
+            <p class="small" id="vector_a"></p><h5>Vector of size (128 X 1)</h5>
+        </div>
+        <div class="col-sm-6">
+            <p class="small" id="vector_p"></p><h5>Vector of size (128 X 1)</h5>
+        </div>
+    </div>
+
+    <div class="text-center"><h2 id="distance"></h2></div>
+   
 </div>
 
 <script type="text/javascript">
     $(document).ready(function(){
-        var socket = io.connect('http://0.0.0.0:5000/');
+        var socket = io.connect('http://0.0.0.0:8000/');
     
         socket.on('vector', function(data){
-            $('img').attr('src', data.img);
-            $('p').html(data.vector);
+            $('#img_a').attr('src', data.img_a);
+            $('#img_p').attr('src', data.img_p);
+            $('#vector_a').html(data.vector_a);
+            $('#vector_p').html(data.vector_p);
+            $('#distance').html("Distance = "+data.distance);
+            
             
         })
     })
