add number of flag results and fix bugs

--- a/main/app/templates/display.html
+++ b/main/app/templates/display.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="text-center"><h3>Pre Operation</h3></div>
+            <div class="text-center"><h3>Post Operation</h3></div>
             <br>
             <br>
             <!-- <input type="file" name="post" class="file col-md-offset-4 col-md-4" id="postop" value="+"/> -->
