--- a/main/demo/templates/intro.html
+++ b/main/demo/templates/intro.html
@@ -25,8 +25,11 @@
         <a class="nav-link text-white" href="/triplet">Triplets</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link text-white" href="/augmentation">Preprocessing</a>
+        <a class="nav-link text-white" href="/preprocess">Preprocessing</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/augmentation">Augmentation</a>
+            </li>
         <li class="nav-item">
         <a class="nav-link text-white" href="/photoshop?out=0">Photoshop</a>
         </li>
