--- a/main/demo/templates/triplet.html
+++ b/main/demo/templates/triplet.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="m-3 text-center">Image to Vector</h1>
+<h1 class="m-3 text-center">Training Triplets</h1>
 <div class="container-fluid">
     <div class="row p-0 text-center">
         <div class="col-sm-3">
@@ -30,8 +30,6 @@
             <div class="text-center"><h2 id="diff-distance"></h2></div>
         </div>
     </div>
-
-   
 </div>
 
 <script type="text/javascript">
