add multithreading for pre and post

--- a/main/app/templates/rejected-list.html
+++ b/main/app/templates/rejected-list.html
@@ -9,8 +9,8 @@
 
 <br><br><br>
 <div class="container">
-    <div class="row">
-        <div class="row">
+    <div class="container">
+        <div>
             <h3>Rejected List</h3>
         </div>
         <div class="row">
@@ -18,7 +18,7 @@
                 <div class="col-md-3 p-3">
                     <div class="card text-center">
                         <div class="card-header">
-                        Image {{t}}
+                        Image {{loop.index}}
                         </div>
                         <div class="row card-body">
                             <div class="col-sm text-center">
