--- a/main/app/templates/processing.html
+++ b/main/app/templates/processing.html
@@ -8,6 +8,11 @@
                 <img src="/static/loading.gif" alt="Processing" width="150" height="150">
             </div>
             <br>
+            <div class="large" id="pre-post-model-text">Loading images to pre post model : </div>
+            <div class="progress">
+                <div id = "pre-post-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <br>
             <div class="large" id="pre-model-text">Loading images to pre duplicates model : </div>
             <div class="progress">
                 <div id = "pre-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -18,19 +23,9 @@
                 <div id = "post-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
-            <div class="large" id="pre-post-model-text">Loading images to pre post model : </div>
+            <div class="large" id="ps-text">Checking for photoshop : </div>
             <div class="progress">
-                <div id = "pre-post-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-            <div class="large" id="pre-compare-text">Comparing pre images for duplicates : </div>
-            <div class="progress">
-                <div id = "pre-compare" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-            <div class="large" id="post-compare-text">Comparing post images for duplicates : </div>
-            <div class="progress">
-                <div id = "post-compare" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id = "ps-model" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
     </body>
@@ -39,6 +34,14 @@
         $(document).ready(function(){
             var socket = io.connect('http://0.0.0.0:5000/');
         
+            socket.on('ps', function(data){
+
+                $('#ps-text').attr('aria-valuenow', data.i);
+                $('#ps-model').attr('style', "width:" + (data.i*100)/data.total + "%");
+                $('#ps-model-text').html("Checking for photoshop : " + data.img_name + " " + data.i+"/"+data.total);
+
+            })
+
             socket.on('pre-model', function(data){
 
                 $('#pre-model').attr('aria-valuenow', data.pre_model_i);
@@ -58,20 +61,6 @@
                 $('#pre-post-model').attr('aria-valuenow', data.pp_model_i);
                 $('#pre-post-model').attr('style', "width:" + (data.pp_model_i*100)/data.total + "%");
                 $('#pre-post-model-text').html("Loading images to pre post model : " + data.pp_model_img + " " + data.pp_model_i+"/"+data.total);
-
-            })
-            socket.on('pre-compare', function(data){
-                
-                $('#pre-compare').attr('aria-valuenow', data.pre_compare_i);
-                $('#pre-compare').attr('style', "width:" + (data.pre_compare_i*100)/data.total + "%");
-                $('#pre-compare-text').html("Comparing pre images for duplicates : " + data.pre_compare_img + " " +data.pre_compare_i+"/"+data.total);
-
-            })
-            socket.on('post-compare', function(data){
-                
-                $('#post-compare').attr('aria-valuenow', data.post_compare_i);
-                $('#post-compare').attr('style', "width:" + (data.post_compare_i*100)/data.total + "%");
-                $('#post-compare-text').html("Comparing post images for duplicates : " + data.post_compare_img + " " + data.post_compare_i +"/"+data.total);
 
             })
             socket.on('result', function(data){
