--- a/main/app/templates/result-directory.html
+++ b/main/app/templates/result-directory.html
@@ -16,6 +16,54 @@
     
     <div class="container">
         <div style="background-color: #4A33E8;" class="rounded-top m-0">
+            <h3 class="p-3 text-white">Pre Post Matching</h3>
+        </div>
+        
+        {% if match[0]|length > 0 %}
+        <div class="alert alert-info m-0" role="alert">
+            Number of flagged results : {{match[0]|length}}<br>
+            Kindly Accept if you find them to be OK, Reject if you find them to be the same people
+        </div>
+        <div class="row">
+            {% for t in range(match[0]|length) %}
+            
+                <div class="col-md-4 p-3" id="pre_post_{{loop.index}}">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            Image set {{t}}
+                        </div>
+                        <div class="row card-body">
+                            <div class="col-sm text-center">
+                                <img class="img-fluid" height="140" width="140" src="static{{ match[1][t] }}">    
+                            </div>
+                            <div class="col-sm text-center">
+                                <img class="img-fluid" height="140" width="140" src="static{{ match[2][t] }}">    
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                        Match = {{ ((0.5/(0.5+match[0][t]))*100) }}%
+                        <br>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="submit" onclick="reject('{{loop.index}}','#pre_post_','{{match[1][t]}}')" class="btn btn-outline-danger d-inline-block .float-left">Reject</button>
+                            <button type="submit" onclick="accept('{{loop.index}}','#pre_post_','{{match[1][t]}}')" class="btn btn-outline-success d-inline-block .float-right">Accept</button>
+                        </div>
+                    </div>
+                </div>
+            
+            {% endfor %}
+        </div>
+        {% else %}
+        <div class="alert alert-success" role="alert">
+            There are no discrepancies
+        </div>
+        {% endif %}
+    </div>
+    
+    <hr>
+
+    <div class="container">
+        <div style="background-color: #4A33E8;" class="rounded-top m-0">
             <h3 class="p-3 text-white">Pre Pre Matching</h3>
         </div>
         
@@ -55,7 +103,7 @@
         </div>
         {% else %}
         <div class="alert alert-success" role="alert">
-            There are no discrepencies
+            There are no discrepancies
         </div>
         {% endif %}
     </div>
@@ -103,60 +151,12 @@
         </div>
         {% else %}
         <div class="alert alert-success" role="alert">
-            There are no discrepencies
+            There are no discrepancies
         </div>
         {% endif %}
     </div>
 
     <hr>
-
-    <div class="container">
-        <div style="background-color: #4A33E8;" class="rounded-top m-0">
-            <h3 class="p-3 text-white">Pre Post Matching</h3>
-        </div>
-        
-        {% if match[0]|length > 0 %}
-        <div class="alert alert-info m-0" role="alert">
-            Number of flagged results : {{match[0]|length}}<br>
-            Kindly Accept if you find them to be OK, Reject if you find them to be the same people
-        </div>
-        <div class="row">
-            {% for t in range(match[0]|length) %}
-            
-                <div class="col-md-4 p-3" id="pre_post_{{loop.index}}">
-                    <div class="card text-center">
-                        <div class="card-header">
-                            Image set {{t}}
-                        </div>
-                        <div class="row card-body">
-                            <div class="col-sm text-center">
-                                <img class="img-fluid" height="140" width="140" src="static{{ match[1][t] }}">    
-                            </div>
-                            <div class="col-sm text-center">
-                                <img class="img-fluid" height="140" width="140" src="static{{ match[2][t] }}">    
-                            </div>
-                        </div>
-                        <div class="card-footer text-muted">
-                        Match = {{ ((0.5/(0.5+match[0][t]))*100) }}%
-                        <br>
-                        </div>
-                        <div class="card-footer text-muted">
-                            <button type="submit" onclick="reject('{{loop.index}}','#pre_post_','{{match[1][t]}}')" class="btn btn-outline-danger d-inline-block .float-left">Reject</button>
-                            <button type="submit" onclick="accept('{{loop.index}}','#pre_post_','{{match[1][t]}}')" class="btn btn-outline-success d-inline-block .float-right">Accept</button>
-                        </div>
-                    </div>
-                </div>
-            
-            {% endfor %}
-        </div>
-        {% else %}
-        <div class="alert alert-success" role="alert">
-            There are no discrepencies
-        </div>
-        {% endif %}
-    </div>
-
-    <br><br><br>
 
     <div>
         <div style="background-color: #4A33E8;" class="rounded-top m-0">
