Minor changes in demo

--- a/main/demo/templates/base.html
+++ b/main/demo/templates/base.html
@@ -30,7 +30,10 @@
                 <a class="nav-link text-white" href="/vector">Vector Representation</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link text-white" href="/triplet">Triplets</a>
+                <a class="nav-link text-white" href="/tripletpairs">Triplets</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link text-white" href="/triplet">Training</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/preprocess">Preprocessing</a>
