--- a/main/demo/templates/photoshop.html
+++ b/main/demo/templates/photoshop.html
@@ -7,28 +7,28 @@
     <div class="row p-0">
         <div class="col-sm-4 p-0">
             <img src="/static/photoshop/images/F242603_PR.jpg" alt=""
-            class="img-fluid">
+            class="img-fluid img-thumbnail">
         </div>
         <div class="col-sm-4 p-0">
-            <img class="img-fluid"
+            <img class="img-fluid img-thumbnail"
             src="/static/photoshop/images/F242603_PO.jpg" alt="">
         </div>
         <div class="col-sm-4 p-0">
-            <img class="img-fluid"
+            <img class="img-fluid img-thumbnail"
             src="/static/photoshop/images/F242603_PR_wp.jpg" alt="">
         </div>
     </div>
     <div class="row p-0">
         <div class="col-sm-4 p-0">
             <img src="/static/photoshop/images/PO_p.jpg" alt=""
-            class="img-fluid">
+            class="img-fluid img-thumbnail">
         </div>
         <div class="col-sm-4 p-0">
-            <img class="img-fluid"
+            <img class="img-fluid img-thumbnail"
             src="/static/photoshop/images/PRE_F242566_23_21_R.jpg" alt="">
         </div>
         <div class="col-sm-4 p-0">
-            <a href="/photoshop?out=1"><img class="img-fluid"
+            <a href="/photoshop?out=1"><img class="img-fluid img-thumbnail"
             src="/static/photoshop/images/PRE_F242661_23_21_L.jpg" alt=""></a>
         </div>
     </div>
@@ -38,28 +38,28 @@
     <div class="row p-0">
             <div class="col-sm-4 p-0">
                 <img src="/static/photoshop/elas/F242603_PR.jpg" alt=""
-                class="img-fluid">
+                class="img-fluid img-thumbnail">
             </div>
             <div class="col-sm-4 p-0">
-                <img class="img-fluid"
+                <img class="img-fluid img-thumbnail"
                 src="/static/photoshop/elas/F242603_PO.jpg" alt="">
             </div>
             <div class="col-sm-4 p-0">
-                <img class="img-fluid"
+                <img class="img-fluid img-thumbnail"
                 src="/static/photoshop/elas/F242603_PR_wp.jpg" alt="">
             </div>
         </div>
         <div class="row p-0">
             <div class="col-sm-4 p-0">
                 <img src="/static/photoshop/elas/PO_p.jpg" alt=""
-                class="img-fluid">
+                class="img-fluid img-thumbnail">
             </div>
             <div class="col-sm-4 p-0">
-                <img class="img-fluid"
+                <img class="img-fluid img-thumbnail"
                 src="/static/photoshop/elas/PRE_F242566_23_21_R.jpg" alt="">
             </div>
             <div class="col-sm-4 p-0">
-                <a href="/photoshop?out=0"><img class="img-fluid"
+                <a href="/photoshop?out=0"><img class="img-fluid img-thumbnail"
                 src="/static/photoshop/elas/PRE_F242661_23_21_L.jpg" alt=""></a>
             </div>
         </div>
