--- a/main/demo/templates/intro.html
+++ b/main/demo/templates/intro.html
@@ -8,32 +8,35 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <nav class="navbar navbar-expand-lg navbar-light text-white"
-    style="background-color: #4A33E8;">
+        style="background-color: #4A33E8;">
     <a class="navbar-brand text-white" href="/">EYC3PDBS3</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item">
-        <a class="nav-link text-white" href="/rcpr">RCPR</a>
+            <a class="nav-link text-white" href="/rcpr">RCPR</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link text-white" href="/vector">Vector Representation</a>
+            <a class="nav-link text-white" href="/vector">Vector Representation</a>
         </li>
         <li class="nav-item active">
-        <a class="nav-link text-white" href="/triplet">Triplets</a>
+            <a class="nav-link text-white" href="/tripletpairs">Triplets</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link text-white" href="/triplet">Training</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link text-white" href="/preprocess">Preprocessing</a>
+            <a class="nav-link text-white" href="/preprocess">Preprocessing</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" href="/augmentation">Augmentation</a>
-            </li>
-        <li class="nav-item">
-        <a class="nav-link text-white" href="/photoshop?out=0">Photoshop</a>
         </li>
-    </ul>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/photoshop?out=0">Photoshop</a>
+        </li>
+        </ul>
     </div>
 </nav>
 
