--- a/main/app/templates/result-directory.html
+++ b/main/app/templates/result-directory.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                        Match = {{ ((0.5/(0.5+match[0][t]))*100) }}%
+                        Match = {{ ((0.6/(0.6+match[0][t]))*100) }}%
                         <br>
                         </div>
                         <div class="card-footer text-muted">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                        Match = {{ ((0.5/(0.5+pre_match[0][t]))*100) }}%
+                        Match = {{ ((0.9/(0.9+pre_match[0][t]))*100) }}%
                         <br>
                         </div>
                         <div class="card-footer text-muted">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                        Match = {{ ((0.5/(0.5+post_match[0][t]))*100) }}%
+                        Match = {{ ((0.9/(0.9+post_match[0][t]))*100)|round|int }}%
                         <br>
                         </div>
                         <div class="card-footer text-muted">
