show ela on result directory

--- a/main/app/templates/result-directory.html
+++ b/main/app/templates/result-directory.html
@@ -179,6 +179,9 @@
                             <div class="col-sm text-center">
                                 <img height="140" width="140" src="{{ps_post[t] }}">    
                             </div>
+                            <div class="col-sm text-center">
+                                <img height="140" width="140" src="{{ps_post_ela[t] }}">    
+                            </div>
                         </div>
                         <div class="card-footer text-muted">
                         <br>
@@ -203,7 +206,10 @@
                         </div>
                         <div class="row card-body">
                             <div class="col-sm text-center">
-                                <img height="140" width="140" src="{{ps_pre[t] }}">    
+                                <img height="140" width="140" src="{{ps_pre[t] }}">
+                            </div>
+                            <div class="col-sm text-center">
+                                <img height="140" width="140" src="{{ps_pre_ela[t] }}">
                             </div>
                         </div>
                         <div class="card-footer text-muted">
